--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,40 @@ jobs:
                   clang-format-version: '14'
                   check-path: .
 
+    compilematrix:
+        runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                compiler: [gcc, clang]
+                mpi: [ON, OFF]
+        name: Compile ${{ matrix.compiler }} MPI ${{ matrix.mpi }}}
+        steps:
+            - uses: actions/checkout@v3
+            - name: install gsl
+              run: sudo apt-get install libgsl-dev
+            - name: setup clang
+              if: matrix.compiler == 'clang'
+              run: |
+                  which clang++
+                  clang++ --version
+                  export CXX=clang++
+
+            - name: setup GCC
+              if: matrix.compiler == 'gcc'
+              run: |
+                  which g++
+                  g++ --version
+                  export CXX=g++
+
+            - name: install openmpi
+              if: matrix.mpi == 'ON'
+              run: |
+                  sudo apt install -y openmpi-bin libopenmpi-dev
+
+            - name: compile cp artisoptions_nltenebular.h artisoptions.h make clean make CXX=clang++ MPI=${{matrix.mpi}} -j${{ steps.cpu-count.outputs.count
+                  }} sn3d exspec make clean cp artisoptions_classic.h artisoptions.h make CXX=clang++ MPI=${{matrix.mpi}} -j${{ steps.cpu-count.outputs.count
+                  }} sn3d exspec
+
     compile_clang:
         name: Compile with Clang
         runs-on: ubuntu-latest
@@ -113,7 +147,7 @@ jobs:
                   make -j${{ steps.cpu-count.outputs.count }} sn3d exspec
 
     compile_intel:
-        name: Compile with GCC and OpenMPI
+        name: Compile with Intel oneAPI
         runs-on: ubuntu-latest
 
         steps:
