--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,7 @@ jobs:
             matrix:
                 compiler: [{name: gcc, cmd: g++}, {name: clang, cmd: clang++}, {name: intel, cmd: icpc}]
                 mpi: [ON, OFF]
+            fail-fast: false
 
         name: Compile ${{ matrix.compiler.name }} MPI ${{ matrix.mpi }}
         steps:
@@ -73,11 +74,7 @@ jobs:
                   rm GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
                   sudo echo "deb https://apt.repos.intel.com/oneapi all main" | sudo tee /etc/apt/sources.list.d/oneAPI.list
                   sudo apt-get update
-                  sudo apt-get install -y intel-oneapi-common-vars
-                  sudo apt-get install -y intel-oneapi-mpi
                   sudo apt-get install -y intel-oneapi-mpi-devel
-                  sudo apt-get install -y libgsl-dev
-                  sudo apt install -y openmpi-bin libopenmpi-dev
 
             - name: install openmpi
               if: matrix.mpi == 'ON' && matrix.compiler != 'intel'
