--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,16 +68,19 @@ jobs:
               run: sudo apt-get install libgsl-dev
 
             - name: Install Intel oneAPI
+              if: mmatrix.compiler.name != 'intel'
               run: |
                   wget https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
                   sudo apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
                   rm GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
                   sudo echo "deb https://apt.repos.intel.com/oneapi all main" | sudo tee /etc/apt/sources.list.d/oneAPI.list
                   sudo apt-get update
+                  sudo apt-get install -y intel-oneapi-common-vars
+                  sudo apt-get install -y intel-oneapi-mpi
                   sudo apt-get install -y intel-oneapi-mpi-devel
 
             - name: install openmpi
-              if: matrix.mpi == 'ON' && matrix.compiler != 'intel'
+              if: matrix.mpi == 'ON' && matrix.compiler.name != 'intel'
               run: |
                   sudo apt install -y openmpi-bin libopenmpi-dev
                   CXX=mpicxx
